Revert "Endre fra Servlet til Reactive på diverse apper som mangler dette og skrive de om (#4072)"
This reverts commit f82f921f5f1c5325a09e94ffddca282274d11590.